# raredx_ai

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT_HISTORY.md  PROJECT_CONTEXT.md  README.md  SYSTEM_PROMPT.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  fix-request.md  refactor-request.md  setting-request.md
.github/workflows/: ci.yml  deploy-spare-mac.yml
api/: main.py
app/: __init__.py  config.py  main.py  original_hpo_mapper_wrapper.py
app/api/: admin_cypher.py  graph.py  hpo_mappers.py  retrieval.py
app/database/: neo4j.py
app/embedding/: __init__.py  backends.py  biomedical.py  faiss_index.py  hpo_graph_index.py
app/etl/: __init__.py  hpo_loader.py  models.py  processed_store.py
app/graph/: __init__.py  etl.py  retrieval.py  schema.py
demo/: streamlit_app.py
docs/: cloudflare_tunnel_hosting.md  doc2hpo_repository_comparison.md  github_actions_deployment.md  graph_evidence_scoring_plan.md  neo4j_visualization_examples.md
notebooks/: 01_data_eda.ipynb  02_hpo_graph.ipynb  03_baseline_model.ipynb  04_gcn_experiment.ipynb  05_gene_prioritization.ipynb
reports/: technical_report.md
scripts/: build_faiss.py  build_processed.py  check_setup.py  download_hpo.py  load_neo4j.py
tests/: test_api_retrieval.py  test_cypher_lab.py  test_graph_schema.py  test_hpo_loader.py  test_ic_baseline.py  test_negation.py  test_note_retrieval.py  test_original_hpo_mapper.py  test_original_hpo_mapper_wrapper.py  test_phenotype_llm_qc.py
(+46 files in other folders)
