[project]
name = "raredx-ai"
version = "0.1.0"
description = "Explainable rare disease candidate ranking with HPO, FAISS, and Neo4j"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "neo4j>=5.22.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

